// Copyright 2022 The Kubernetes Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package ingressv1;

option go_package = "k8s.io/ingress-nginx/pkg/apis/ingress";

// Ingress Configuration Service.
service Configuration {
  // WatchConfigurations watches for full configurations
  // TODO: We can turn this into a bi-directional stream so backends provides events in realtime instead of
  // creating a new service just to post events (we should check what suits best for performance)
  rpc WatchConfigurations (BackendName) returns (stream Configurations) {}
  // GetConfigurations will be used for initial sync and periodic syncs
  rpc GetConfigurations(BackendName) returns (Configurations) {}
}

// EventService is responsible for receiving events from Backends and turning into k8s events
service EventService {
  // TODO: replace EventReturn by none.proto
  rpc PublishEvent(stream EventMessage) returns (EventReturn) {}
}

// The request message containing the node name.
message BackendName {
  // name of the backend that posted the message
  string name = 1;
  // namespace of the backend that posted the message
  string namespace = 2;
}

message EventMessage {
  BackendName backend = 1;
  bytes podinfo = 2;
  string eventtype = 3;
  string reason = 4;
  string message = 5;
}

message EventReturn {
  bool ok = 1;
}

// The response message containing the greetings
message Configurations {
  // TODO: This should be of type any, probably!
  bytes configuration = 1;
}